[package]
name = "poem-middleware"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.22.1"
poem = { version = "3.0.0", features = ["anyhow", "test"] }
hmac = "0.12.1"
sha2 = "0.10.8"
chrono = "0.4.19"
tokio = { version = "1.0", features = ["sync", "time", "macros", "net"] }